<?xml version="1.0"?>
<package format="3">
  <name>vrx_gazebo</name>
  <version>1.3.0</version>
  <description>
    The ROS package for the RobotX competition running in Gazebo.
  </description>
  <maintainer email="caguero@osrfoundation.org">Carlos Aguero</maintainer>
  <maintainer email="jriveroo@osrfoundation.org">Jose Luis Rivero</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://wiki.ros.org/vrx_gazebo</url>
  <url type="bugtracker">http://github.com/osrf/vrx/issues</url>
  <author email="briansbingham@gmail.com">Brian Bingham</author>
  <author email="caguero@osrfoundation.org">Carlos Aguero</author>
  <replace>vmrc_gazebo</replace>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>protobuf-dev</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <depend version_gte="2.5.17">gazebo_ros</depend>
  <depend>gazebo_dev</depend>
  <depend>geographic_msgs</depend>
  <depend>joy</depend>
  <depend>joy_teleop</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>wamv_gazebo</depend>
  <depend>wave_gazebo</depend>
  <depend>xacro</depend>
  <depend>xterm</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_model_path="${prefix}/models/dock_permutations"/>
    <gazebo_ros gazebo_media_path="${prefix}"/>
  </export>
</package>
