<?xml version="1.0"?>
<package format="3">
  <name>vrx_ros</name>
  <version>0.0.0</version>
  <description>VRX ROS resources</description>

  <maintainer email="caguero@openrobotics.org">Carlos Agüero</maintainer>

  <license>Apache License 2.0</license>

  <author>Ian Chen</author>
  <author>Carlos Agüero</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  
  <depend>geometry_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rosgraph_msgs</depend>
  <depend>ros_ign_bridge</depend>
  <depend>ros_ign_interfaces</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  
  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
