<?xml version="1.0"?>
<package format="3">
  <name>wamv_description</name>
  <version>1.3.0</version>
  <description>This package provides a URDF model of WAM-V</description>
  <maintainer email="caguero@osrfoundation.org">Carlos Aguero</maintainer>
  <maintainer email="jriveroo@osrfoundation.org">Jose Luis Rivero</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://wiki.ros.org/wamv_description</url>
  <url type="bugtracker">http://github.com/osrf/vrx/issues</url>
  <author email="briansbingham@gmail.com">Brian Bingham</author>
  <author email="caguero@osrfoundation.org">Carlos Aguero</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>xacro</depend>
  <exec_depend>gazebo_ros</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/models" />
  </export>
</package>
