<?xml version="1.0"?>
<package format="2">
  <name>wamv_gazebo</name>
  <version>0.3.2</version>
  <description>
    Provides templates and examples for integrating the WAM-V model into gazebo with dynamics, sensors, etc.
  </description>
  <maintainer email="caguero@osrfoundation.org">Carlos Aguero</maintainer>
  <maintainer email="jriveroo@osrfoundation.org">Jose Luis Rivero</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://wiki.ros.org/wamv_gazebo</url>
  <url type="bugtracker">http://bitbucket.org/osrf/vmrc/issues</url>
  <author email="briansbingham@gmail.com">Brian Bingham</author>
  <author email="caguero@osrfoundation.org">Carlos Aguero</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>gazebo_plugins</depend>
  <depend>hector_gazebo_plugins</depend>
  <depend>robot_localization</depend>
  <depend>usv_gazebo_plugins</depend>
  <depend>velodyne_gazebo_plugins</depend>
  <depend>wamv_description</depend>
  <depend>xacro</depend>
</package>
